--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -84113,6 +84113,7 @@ server=/wdjimg.com/114.114.114.114
 server=/wdjky.com/114.114.114.114
 server=/wdkao.com/114.114.114.114
 server=/wdkkvx.xyz/114.114.114.114
+server=/wdklchina.com/114.114.114.114
 server=/wdku.net/114.114.114.114
 server=/wdkud6.com/114.114.114.114
 server=/wdldl.com/114.114.114.114
