--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -77248,6 +77248,7 @@ server=/szitcare.com/114.114.114.114
 server=/szjawest.com/114.114.114.114
 server=/szjbz.cc/114.114.114.114
 server=/szjcmr.com/114.114.114.114
+server=/szjcyljt.com/114.114.114.114
 server=/szjcyyy.com/114.114.114.114
 server=/szjg.net/114.114.114.114
 server=/szjhxjt.com/114.114.114.114
