--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -20782,6 +20782,7 @@ server=/ckeyan17.com/114.114.114.114
 server=/ckeyan17.net/114.114.114.114
 server=/ckeyedu.com/114.114.114.114
 server=/ckimg.com/114.114.114.114
+server=/ckj100.com/114.114.114.114
 server=/ckjr001.com/114.114.114.114
 server=/ckjryy.com/114.114.114.114
 server=/ckplayer.com/114.114.114.114
