--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -55821,6 +55821,7 @@ server=/lovelive.tools/114.114.114.114
 server=/lovelixiang.com/114.114.114.114
 server=/lovellacountry.com/114.114.114.114
 server=/lovelyping.com/114.114.114.114
+server=/lovelytooth.com/114.114.114.114
 server=/lovemojito.com/114.114.114.114
 server=/lovengame.com/114.114.114.114
 server=/loveniwed.com/114.114.114.114
