--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -77547,6 +77547,7 @@ server=/szxuexiao.com/114.114.114.114
 server=/szxuw.com/114.114.114.114
 server=/szxxj.com/114.114.114.114
 server=/szxxtx.com/114.114.114.114
+server=/szxxw.com/114.114.114.114
 server=/szxyfc.com/114.114.114.114
 server=/szxyjd.com/114.114.114.114
 server=/szxyxbkle.com/114.114.114.114
