--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -77180,6 +77180,7 @@ server=/szfolo.com/114.114.114.114
 server=/szforter.com/114.114.114.114
 server=/szftfybj.com/114.114.114.114
 server=/szfty.net/114.114.114.114
+server=/szftzy.com/114.114.114.114
 server=/szfutong.com/114.114.114.114
 server=/szfuture.com/114.114.114.114
 server=/szfw.org/114.114.114.114
