--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -77597,6 +77597,7 @@ server=/szzhangchu.com/114.114.114.114
 server=/szzhaodaxin.com/114.114.114.114
 server=/szzhsponge.com/114.114.114.114
 server=/szzhuoju.com/114.114.114.114
+server=/szzkgk.com/114.114.114.114
 server=/szzntech.com/114.114.114.114
 server=/szznzn.com/114.114.114.114
 server=/szzoan.com/114.114.114.114
