--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -71070,6 +71070,7 @@ server=/scgj56.net/114.114.114.114
 server=/scgkw.net/114.114.114.114
 server=/scgra.com/114.114.114.114
 server=/scgxhq.com/114.114.114.114
+server=/sch-szu.com/114.114.114.114
 server=/schdxww.com/114.114.114.114
 server=/schengle.com/114.114.114.114
 server=/schezi.com/114.114.114.114
