--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -23338,6 +23338,7 @@ server=/cy-isp.net/114.114.114.114
 server=/cy-jm.com/114.114.114.114
 server=/cy-mmm.com/114.114.114.114
 server=/cy.com/114.114.114.114
+server=/cy0go.com/114.114.114.114
 server=/cy123.cc/114.114.114.114
 server=/cy2009.com/114.114.114.114
 server=/cy365.com/114.114.114.114
