--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -93221,6 +93221,7 @@ server=/ytchangyang.com/114.114.114.114
 server=/ytcj.com/114.114.114.114
 server=/ytcutv.com/114.114.114.114
 server=/ytdaily.com/114.114.114.114
+server=/ytdawen.com/114.114.114.114
 server=/ytdcloud.com/114.114.114.114
 server=/ytdewei.com/114.114.114.114
 server=/yte1.com/114.114.114.114
