--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -81025,6 +81025,7 @@ server=/uvoisbg.xyz/114.114.114.114
 server=/uvsec.com/114.114.114.114
 server=/uvwhd.com/114.114.114.114
 server=/uw3c.com/114.114.114.114
+server=/uw8888.com/114.114.114.114
 server=/uw9.net/114.114.114.114
 server=/uwa4d.com/114.114.114.114
 server=/uwan.com/114.114.114.114
