--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -59916,6 +59916,7 @@ server=/mywirebox.com/114.114.114.114
 server=/mywll.com/114.114.114.114
 server=/mywood.cc/114.114.114.114
 server=/myworld6.com/114.114.114.114
+server=/myxhxb.com/114.114.114.114
 server=/myxxts.club/114.114.114.114
 server=/myxxts.com/114.114.114.114
 server=/myxycjh.com/114.114.114.114
