--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -44959,6 +44959,7 @@ server=/inkankan.com/114.114.114.114
 server=/inkanke.com/114.114.114.114
 server=/inkcc.net/114.114.114.114
 server=/inkcn.com/114.114.114.114
+server=/inkcrane.com/114.114.114.114
 server=/inke.com/114.114.114.114
 server=/inke.tv/114.114.114.114
 server=/inkeygo.com/114.114.114.114
