--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -79106,6 +79106,7 @@ server=/transsscoco.com/114.114.114.114
 server=/transwarp.io/114.114.114.114
 server=/transwiki.org/114.114.114.114
 server=/tranwit.com/114.114.114.114
+server=/tratamientoalcohol.com/114.114.114.114
 server=/tratao.com/114.114.114.114
 server=/travel-x.cc/114.114.114.114
 server=/travel6.co.uk/114.114.114.114
