--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -61370,6 +61370,7 @@ server=/nmbyh.com/114.114.114.114
 server=/nmcoo.com/114.114.114.114
 server=/nmcpo.com/114.114.114.114
 server=/nmcysp.com/114.114.114.114
+server=/nmdhzs.com/114.114.114.114
 server=/nmet168.com/114.114.114.114
 server=/nmgatdj.com/114.114.114.114
 server=/nmgbaiju.com/114.114.114.114
