--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -75482,6 +75482,7 @@ server=/swarma.net/114.114.114.114
 server=/swarma.org/114.114.114.114
 server=/swatou.com/114.114.114.114
 server=/swbbsc.com/114.114.114.114
+server=/swc-china.com/114.114.114.114
 server=/swchina.org/114.114.114.114
 server=/sweet-data.com/114.114.114.114
 server=/sweetalkos.com/114.114.114.114
