--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -41389,6 +41389,7 @@ server=/hrbaodian.com/114.114.114.114
 server=/hrbar.com/114.114.114.114
 server=/hrbbcf.com/114.114.114.114
 server=/hrbeduy.com/114.114.114.114
+server=/hrbehkj.com/114.114.114.114
 server=/hrbesd.com/114.114.114.114
 server=/hrbj.net/114.114.114.114
 server=/hrbjianchewang.com/114.114.114.114
