--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -39514,6 +39514,7 @@ server=/hengjiecdn.com/114.114.114.114
 server=/hengjiu-pt.com/114.114.114.114
 server=/hengliguoji.com/114.114.114.114
 server=/henglilai.vip/114.114.114.114
+server=/hengljx.com/114.114.114.114
 server=/hengqian.com/114.114.114.114
 server=/hengqifeng.com/114.114.114.114
 server=/hengqijy.com/114.114.114.114
