--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -15873,6 +15873,7 @@ server=/brandpano.com/114.114.114.114
 server=/brandsitejp.com/114.114.114.114
 server=/brandvista.com/114.114.114.114
 server=/brandy-mf.com/114.114.114.114
+server=/brasaude.com/114.114.114.114
 server=/bravognss.com/114.114.114.114
 server=/brazzaleqingdao.com/114.114.114.114
 server=/brcpower.com/114.114.114.114
