--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -75426,6 +75426,7 @@ server=/sutune.me/114.114.114.114
 server=/suujee.com/114.114.114.114
 server=/suuny0826.com/114.114.114.114
 server=/suv666.com/114.114.114.114
+server=/suxiangsj.com/114.114.114.114
 server=/suxiazai.com/114.114.114.114
 server=/suxieban.com/114.114.114.114
 server=/suxiege.com/114.114.114.114
