--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -11322,6 +11322,7 @@ server=/aoliday.com/114.114.114.114
 server=/aoligei.site/114.114.114.114
 server=/aolinpharma.com/114.114.114.114
 server=/aoliongame.com/114.114.114.114
+server=/aolunsa.com/114.114.114.114
 server=/aolvyou.com/114.114.114.114
 server=/aolylcd.com/114.114.114.114
 server=/aomao.com/114.114.114.114
