--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -79371,6 +79371,7 @@ server=/ttdailynews.com/114.114.114.114
 server=/ttdown.com/114.114.114.114
 server=/ttechhk.com/114.114.114.114
 server=/tteferty33.fun/114.114.114.114
+server=/ttfa8.com/114.114.114.114
 server=/ttfdc.net/114.114.114.114
 server=/ttfly.com/114.114.114.114
 server=/ttfuav.com/114.114.114.114
