--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -24317,6 +24317,7 @@ server=/dayu-valve.com/114.114.114.114
 server=/dayu.com/114.114.114.114
 server=/dayu.work/114.114.114.114
 server=/dayuansouti.com/114.114.114.114
+server=/dayuanzong.com/114.114.114.114
 server=/dayucdn.com/114.114.114.114
 server=/dayue8.com/114.114.114.114
 server=/dayugame.net/114.114.114.114
