--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -13347,6 +13347,7 @@ server=/bazi.cloud/114.114.114.114
 server=/bazi.run/114.114.114.114
 server=/bazi.xin/114.114.114.114
 server=/bazi5.com/114.114.114.114
+server=/bazizeri.com/114.114.114.114
 server=/bazp.net/114.114.114.114
 server=/bb-game.com/114.114.114.114
 server=/bb-garden.com/114.114.114.114
