--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -83207,6 +83207,7 @@ server=/weifenpay.com/114.114.114.114
 server=/weiforyou.net/114.114.114.114
 server=/weifrom.com/114.114.114.114
 server=/weifujd.com/114.114.114.114
+server=/weigangqin.com/114.114.114.114
 server=/weigay.com/114.114.114.114
 server=/weige55.com/114.114.114.114
 server=/weighcb.com/114.114.114.114
