--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -15028,6 +15028,7 @@ server=/bjglxt.com/114.114.114.114
 server=/bjgongteng.com/114.114.114.114
 server=/bjgujibaohu.com/114.114.114.114
 server=/bjgumu.com/114.114.114.114
+server=/bjguodu.com/114.114.114.114
 server=/bjgxhy.com/114.114.114.114
 server=/bjgxs.com/114.114.114.114
 server=/bjgymq.com/114.114.114.114
