--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -15079,6 +15079,7 @@ server=/bjjchf.com/114.114.114.114
 server=/bjjdwx.com/114.114.114.114
 server=/bjjf.cc/114.114.114.114
 server=/bjjfsd.com/114.114.114.114
+server=/bjjgyy.com/114.114.114.114
 server=/bjjhhft.com/114.114.114.114
 server=/bjjihui.com/114.114.114.114
 server=/bjjinl.com/114.114.114.114
