--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -15090,6 +15090,7 @@ server=/bjjkw.net/114.114.114.114
 server=/bjjmzh.com/114.114.114.114
 server=/bjjnzf.com/114.114.114.114
 server=/bjjqzyy.com/114.114.114.114
+server=/bjjstyyzzyy.com/114.114.114.114
 server=/bjjtat.com/114.114.114.114
 server=/bjjubao.org/114.114.114.114
 server=/bjjzsc.com/114.114.114.114
