--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -15092,6 +15092,7 @@ server=/bjjnzf.com/114.114.114.114
 server=/bjjqzyy.com/114.114.114.114
 server=/bjjstyyzzyy.com/114.114.114.114
 server=/bjjsyy.com/114.114.114.114
+server=/bjjszyyy.com/114.114.114.114
 server=/bjjtat.com/114.114.114.114
 server=/bjjubao.org/114.114.114.114
 server=/bjjzsc.com/114.114.114.114
