--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -15143,6 +15143,7 @@ server=/bjmxxh.com/114.114.114.114
 server=/bjmylike.com/114.114.114.114
 server=/bjmzw.com/114.114.114.114
 server=/bjnaxl.com/114.114.114.114
+server=/bjnkzx.com/114.114.114.114
 server=/bjnsr.com/114.114.114.114
 server=/bjoutai.com/114.114.114.114
 server=/bjp321.com/114.114.114.114
