--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -15150,6 +15150,7 @@ server=/bjoutai.com/114.114.114.114
 server=/bjp321.com/114.114.114.114
 server=/bjpag.com/114.114.114.114
 server=/bjpcyd.com/114.114.114.114
+server=/bjpfh.com/114.114.114.114
 server=/bjpgsfjxh.com/114.114.114.114
 server=/bjpinweixuan.com/114.114.114.114
 server=/bjpowernode.com/114.114.114.114
