--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -15155,6 +15155,7 @@ server=/bjpgsfjxh.com/114.114.114.114
 server=/bjpifu.com/114.114.114.114
 server=/bjpinweixuan.com/114.114.114.114
 server=/bjpowernode.com/114.114.114.114
+server=/bjpryk.com/114.114.114.114
 server=/bjqcjdcj.com/114.114.114.114
 server=/bjqh.org/114.114.114.114
 server=/bjqhgjj.com/114.114.114.114
