--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -15203,6 +15203,7 @@ server=/bjsidao.com/114.114.114.114
 server=/bjsinglewindow.com/114.114.114.114
 server=/bjsj5.com/114.114.114.114
 server=/bjsjac.com/114.114.114.114
+server=/bjsjgyy.com/114.114.114.114
 server=/bjsjsch12333.com/114.114.114.114
 server=/bjsjsyly.com/114.114.114.114
 server=/bjsjwl.com/114.114.114.114
