--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -15215,6 +15215,7 @@ server=/bjsound.com/114.114.114.114
 server=/bjsoyo.com/114.114.114.114
 server=/bjsptf.com/114.114.114.114
 server=/bjspw.com/114.114.114.114
+server=/bjsrmyy.com/114.114.114.114
 server=/bjsryc.com/114.114.114.114
 server=/bjsskdn.com/114.114.114.114
 server=/bjstcc.com/114.114.114.114
