--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -15290,6 +15290,7 @@ server=/bjxingma.com/114.114.114.114
 server=/bjxinku.com/114.114.114.114
 server=/bjxinyou.com/114.114.114.114
 server=/bjxjyy666.com/114.114.114.114
+server=/bjxjzyy.com/114.114.114.114
 server=/bjxku.com/114.114.114.114
 server=/bjxtjmsb.com/114.114.114.114
 server=/bjxwcq.com/114.114.114.114
