--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -15378,6 +15378,7 @@ server=/bkjk-inc.com/114.114.114.114
 server=/bkjk.com/114.114.114.114
 server=/bkjk123.com/114.114.114.114
 server=/bkjpress.com/114.114.114.114
+server=/bkjsemi.com/114.114.114.114
 server=/bkn.cc/114.114.114.114
 server=/bkneng.com/114.114.114.114
 server=/bkpcn.com/114.114.114.114
