--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -15926,6 +15926,7 @@ server=/bosszhipin.com/114.114.114.114
 server=/bosunman.com/114.114.114.114
 server=/botaoo.com/114.114.114.114
 server=/botaopac.com/114.114.114.114
+server=/botemotor.com/114.114.114.114
 server=/botnet.cc/114.114.114.114
 server=/botocard.com/114.114.114.114
 server=/botongedu.com/114.114.114.114
