--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -16074,6 +16074,7 @@ server=/broadcast.world/114.114.114.114
 server=/broadcom-wuxi.com/114.114.114.114
 server=/broadon.net/114.114.114.114
 server=/broadskytech.com/114.114.114.114
+server=/broadview-auto.com/114.114.114.114
 server=/bronzesoft.com/114.114.114.114
 server=/broqiang.com/114.114.114.114
 server=/brother-cn.net/114.114.114.114
