--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -16266,6 +16266,7 @@ server=/bttzyw.net/114.114.114.114
 server=/btv.org/114.114.114.114
 server=/btvcd.net/114.114.114.114
 server=/btvcloud.com/114.114.114.114
+server=/btwater.com/114.114.114.114
 server=/btwmw.net/114.114.114.114
 server=/btwoa.com/114.114.114.114
 server=/btwob.net/114.114.114.114
