--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -17230,6 +17230,7 @@ server=/canyinzixun.com/114.114.114.114
 server=/canyon-model.com/114.114.114.114
 server=/canyouchina.com/114.114.114.114
 server=/canyuanzs.com/114.114.114.114
+server=/caoanhospital.com/114.114.114.114
 server=/caobao.com/114.114.114.114
 server=/caocaobusiness.cc/114.114.114.114
 server=/caocaocustomer.cc/114.114.114.114
