--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -18491,6 +18491,7 @@ server=/cgebook.com/114.114.114.114
 server=/cgejournal.com/114.114.114.114
 server=/cger.com/114.114.114.114
 server=/cgguy.com/114.114.114.114
+server=/cghhospital.org/114.114.114.114
 server=/cgiia.com/114.114.114.114
 server=/cgjoy.com/114.114.114.114
 server=/cgjoy.net/114.114.114.114
