--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -18953,6 +18953,7 @@ server=/chemrc.com/114.114.114.114
 server=/chemsb.com/114.114.114.114
 server=/chemsrc.com/114.114.114.114
 server=/chemtour.com/114.114.114.114
+server=/chemwells.com/114.114.114.114
 server=/chemwith.com/114.114.114.114
 server=/chemyq.com/114.114.114.114
 server=/chen-design.com/114.114.114.114
