--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -19993,6 +19993,7 @@ server=/chinawutong.net/114.114.114.114
 server=/chinawuyuan.com/114.114.114.114
 server=/chinaxiaokang.com/114.114.114.114
 server=/chinaxinge.com/114.114.114.114
+server=/chinaxingye.com/114.114.114.114
 server=/chinaxinport.com/114.114.114.114
 server=/chinaxintu.com/114.114.114.114
 server=/chinaxiuqi.com/114.114.114.114
