--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -20227,6 +20227,7 @@ server=/chongzhi.com/114.114.114.114
 server=/chongzuo.club/114.114.114.114
 server=/chonka.com/114.114.114.114
 server=/chontdoled.com/114.114.114.114
+server=/chonton.com/114.114.114.114
 server=/choosephones4u.com/114.114.114.114
 server=/choosepickhere.com/114.114.114.114
 server=/chooway.com/114.114.114.114
