--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -95543,6 +95543,7 @@ server=/ynfabu.com/114.114.114.114
 server=/ynfmly.com/114.114.114.114
 server=/ynfwyy.com/114.114.114.114
 server=/ynfxw.com/114.114.114.114
+server=/yngas.net/114.114.114.114
 server=/yngd016.com/114.114.114.114
 server=/ynggzy.com/114.114.114.114
 server=/yngou.com/114.114.114.114
