--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -22058,6 +22058,7 @@ server=/cnpaf.net/114.114.114.114
 server=/cnpaiwei.com/114.114.114.114
 server=/cnpanda.net/114.114.114.114
 server=/cnpatent.com/114.114.114.114
+server=/cnpcgas.com/114.114.114.114
 server=/cnpdccutter.com/114.114.114.114
 server=/cnpenjing.com/114.114.114.114
 server=/cnpereading.com/114.114.114.114
