--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -88421,6 +88421,7 @@ server=/wuhujianshe.com/114.114.114.114
 server=/wuhukj.fun/114.114.114.114
 server=/wuhusanlian.com/114.114.114.114
 server=/wuhuwater.com/114.114.114.114
+server=/wuhuzr.com/114.114.114.114
 server=/wui5.com/114.114.114.114
 server=/wuji-edu.com/114.114.114.114
 server=/wuji.com/114.114.114.114
