--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -90764,6 +90764,7 @@ server=/xingfuu.com/114.114.114.114
 server=/xinggan.com/114.114.114.114
 server=/xinggan.net/114.114.114.114
 server=/xinggan77.vip/114.114.114.114
+server=/xingganggas.com/114.114.114.114
 server=/xingguanggongkao.com/114.114.114.114
 server=/xinghai365.com/114.114.114.114
 server=/xinghan.vip/114.114.114.114
