--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -40250,6 +40250,7 @@ server=/hebiw.com/114.114.114.114
 server=/hebjxw.com/114.114.114.114
 server=/hebl.name/114.114.114.114
 server=/hebmusic.com/114.114.114.114
+server=/hebngc.com/114.114.114.114
 server=/hebnx.com/114.114.114.114
 server=/hebolaw.com/114.114.114.114
 server=/hebooming.com/114.114.114.114
