--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -98511,6 +98511,7 @@ server=/zgfzh.com/114.114.114.114
 server=/zgfznews.com/114.114.114.114
 server=/zgfznj.com/114.114.114.114
 server=/zgg.com/114.114.114.114
+server=/zggas.com/114.114.114.114
 server=/zggbdsw.net/114.114.114.114
 server=/zggbhb.com/114.114.114.114
 server=/zggcks.com/114.114.114.114
