--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -20897,6 +20897,7 @@ server=/citywy.com/114.114.114.114
 server=/cityy.com/114.114.114.114
 server=/ciunofor.com/114.114.114.114
 server=/civicswarm.com/114.114.114.114
+server=/civigas.com/114.114.114.114
 server=/civilness.com/114.114.114.114
 server=/civiw.com/114.114.114.114
 server=/ciweek.com/114.114.114.114
