--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -51197,6 +51197,7 @@ server=/jxrcgame.com/114.114.114.114
 server=/jxrcw.cc/114.114.114.114
 server=/jxrmtzx.com/114.114.114.114
 server=/jxrqgs.com/114.114.114.114
+server=/jxrqhy.com/114.114.114.114
 server=/jxrsrc.com/114.114.114.114
 server=/jxrtv.com/114.114.114.114
 server=/jxrtvu.com/114.114.114.114
