--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -71336,6 +71336,7 @@ server=/rq.run/114.114.114.114
 server=/rqjrb.com/114.114.114.114
 server=/rqjtp.com/114.114.114.114
 server=/rqkr.com/114.114.114.114
+server=/rqrlxx.com/114.114.114.114
 server=/rqroytj33.fun/114.114.114.114
 server=/rqyy.com/114.114.114.114
 server=/rr-sc.com/114.114.114.114
