--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -96548,6 +96548,7 @@ server=/ytesting.com/114.114.114.114
 server=/ytf8888.com/114.114.114.114
 server=/ytfgf.com/114.114.114.114
 server=/ytg666.com/114.114.114.114
+server=/ytgas.com/114.114.114.114
 server=/ytghnb.com/114.114.114.114
 server=/ytgos.com/114.114.114.114
 server=/ythairui.com/114.114.114.114
