--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -78323,6 +78323,7 @@ server=/sxltsj.com/114.114.114.114
 server=/sxluxiang.com/114.114.114.114
 server=/sxlynykj.com/114.114.114.114
 server=/sxmaps.com/114.114.114.114
+server=/sxmhgas.com/114.114.114.114
 server=/sxmty.com/114.114.114.114
 server=/sxmxwh.com/114.114.114.114
 server=/sxmyh.com/114.114.114.114
