--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -41231,6 +41231,7 @@ server=/hitalkers.com/114.114.114.114
 server=/hitbot.cc/114.114.114.114
 server=/hite.me/114.114.114.114
 server=/hitechfrp.com/114.114.114.114
+server=/hitergas.com/114.114.114.114
 server=/hitevision-solution.com/114.114.114.114
 server=/hitevision-solutions.com/114.114.114.114
 server=/hitevision.com/114.114.114.114
