--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -86804,6 +86804,7 @@ server=/wfzczdh.com/114.114.114.114
 server=/wfzetai.com/114.114.114.114
 server=/wfzqhb.com/114.114.114.114
 server=/wfzssz.com/114.114.114.114
+server=/wgc2025.com/114.114.114.114
 server=/wghaos.com/114.114.114.114
 server=/wghostk.com/114.114.114.114
 server=/wghpdi.com/114.114.114.114
