--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -80622,6 +80622,7 @@ server=/tiancaixing.net/114.114.114.114
 server=/tiancao360.com/114.114.114.114
 server=/tianchanggongjiao.com/114.114.114.114
 server=/tianche.net/114.114.114.114
+server=/tianchengas.com/114.114.114.114
 server=/tianchi.com/114.114.114.114
 server=/tianchihao.com/114.114.114.114
 server=/tianchu.com/114.114.114.114
