--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -100492,6 +100492,7 @@ server=/zjfszhsw.com/114.114.114.114
 server=/zjft.com/114.114.114.114
 server=/zjfujiu.com/114.114.114.114
 server=/zjg-jcu.com/114.114.114.114
+server=/zjgas.com/114.114.114.114
 server=/zjgas.net/114.114.114.114
 server=/zjgcreative.com/114.114.114.114
 server=/zjgeyi.com/114.114.114.114
