--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -33947,6 +33947,7 @@ server=/ght.me/114.114.114.114
 server=/ght120.com/114.114.114.114
 server=/ghtech.com/114.114.114.114
 server=/ghtianshancn.com/114.114.114.114
+server=/ghturbine.com/114.114.114.114
 server=/ghtzgs.com/114.114.114.114
 server=/ghwgame.com/114.114.114.114
 server=/ghxi.com/114.114.114.114
