--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -38468,6 +38468,7 @@ server=/gzrishun.com/114.114.114.114
 server=/gzrkt.com/114.114.114.114
 server=/gzrobot.com/114.114.114.114
 server=/gzrobots.com/114.114.114.114
+server=/gzrqhyxh.com/114.114.114.114
 server=/gzrtnet.com/114.114.114.114
 server=/gzrycl.com/114.114.114.114
 server=/gzschknyy.com/114.114.114.114
