--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -93256,6 +93256,7 @@ server=/xzldbl.com/114.114.114.114
 server=/xzlogo.com/114.114.114.114
 server=/xzlres.com/114.114.114.114
 server=/xzlsqy.com/114.114.114.114
+server=/xzltrq.com/114.114.114.114
 server=/xzltzc.com/114.114.114.114
 server=/xzlzf.com/114.114.114.114
 server=/xzm56.com/114.114.114.114
