--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -41435,6 +41435,7 @@ server=/hkyymn.com/114.114.114.114
 server=/hkzlcm.com/114.114.114.114
 server=/hl-brushes.com/114.114.114.114
 server=/hl-bxg.com/114.114.114.114
+server=/hl-epay.com/114.114.114.114
 server=/hl-plastic.com/114.114.114.114
 server=/hl-sl.com/114.114.114.114
 server=/hl95.com/114.114.114.114
