--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -43606,6 +43606,7 @@ server=/huixinyun.com/114.114.114.114
 server=/huixuanjiasu.com/114.114.114.114
 server=/huixueba.net/114.114.114.114
 server=/huiyan315.com/114.114.114.114
+server=/huiyangranqi.com/114.114.114.114
 server=/huiyankan.com/114.114.114.114
 server=/huiyanzhi.com/114.114.114.114
 server=/huiyaohuyu.com/114.114.114.114
