--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -9808,6 +9808,7 @@ server=/ahsz.tv/114.114.114.114
 server=/ahteacher.com/114.114.114.114
 server=/ahtlbyby.com/114.114.114.114
 server=/ahtongyuan.com/114.114.114.114
+server=/ahtrq.com/114.114.114.114
 server=/ahtypg.com/114.114.114.114
 server=/ahuano.com/114.114.114.114
 server=/ahudows.com/114.114.114.114
