--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -41893,6 +41893,7 @@ server=/hnyanglao.com/114.114.114.114
 server=/hnyaosi.com/114.114.114.114
 server=/hnyc998.com/114.114.114.114
 server=/hnydf.net/114.114.114.114
+server=/hnydgl.com/114.114.114.114
 server=/hnyfkj.com/114.114.114.114
 server=/hnyichang.com/114.114.114.114
 server=/hnyingfang.com/114.114.114.114
