--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -50112,6 +50112,7 @@ server=/joytunescn.com/114.114.114.114
 server=/joytype.com/114.114.114.114
 server=/joyu.com/114.114.114.114
 server=/joyuai.com/114.114.114.114
+server=/joyugas.com/114.114.114.114
 server=/joyulf.com/114.114.114.114
 server=/joyuyx.com/114.114.114.114
 server=/joywellsemi.com/114.114.114.114
