--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102008,6 +102008,7 @@ server=/zzcm2.com/114.114.114.114
 server=/zzcm5.com/114.114.114.114
 server=/zzcmjn.com/114.114.114.114
 server=/zzcomm.com/114.114.114.114
+server=/zzcrcgas.com/114.114.114.114
 server=/zzd.pub/114.114.114.114
 server=/zzded.com/114.114.114.114
 server=/zzdengji.com/114.114.114.114
