--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -71981,6 +71981,7 @@ server=/saiyou999.com/114.114.114.114
 server=/saiyouedu.net/114.114.114.114
 server=/saiyunyx.com/114.114.114.114
 server=/saizhi.com/114.114.114.114
+server=/saj110.com/114.114.114.114
 server=/sajs.com/114.114.114.114
 server=/sakata.one/114.114.114.114
 server=/saki.cc/114.114.114.114
