--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -78301,6 +78301,7 @@ server=/sxfu.org/114.114.114.114
 server=/sxfyjzzs.com/114.114.114.114
 server=/sxgbs.com/114.114.114.114
 server=/sxgdtv.com/114.114.114.114
+server=/sxggec.com/114.114.114.114
 server=/sxggzp.com/114.114.114.114
 server=/sxglpx.com/114.114.114.114
 server=/sxgoo.com/114.114.114.114
