--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -100655,6 +100655,7 @@ server=/zjrc.com/114.114.114.114
 server=/zjrc.net/114.114.114.114
 server=/zjrcu.com/114.114.114.114
 server=/zjriji.com/114.114.114.114
+server=/zjrq.com/114.114.114.114
 server=/zjrtv.vip/114.114.114.114
 server=/zjrugao.com/114.114.114.114
 server=/zjsairport.com/114.114.114.114
