--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -18274,6 +18274,7 @@ server=/cdren.com/114.114.114.114
 server=/cdren.net/114.114.114.114
 server=/cdrmagic.com/114.114.114.114
 server=/cdronghai.com/114.114.114.114
+server=/cdrqxh.com/114.114.114.114
 server=/cdrsigc.com/114.114.114.114
 server=/cdrtvu.com/114.114.114.114
 server=/cdruzhu.com/114.114.114.114
