--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -90713,6 +90713,7 @@ server=/xinbaicai.com/114.114.114.114
 server=/xinbalive.com/114.114.114.114
 server=/xinbaohetuliao.com/114.114.114.114
 server=/xinbear.com/114.114.114.114
+server=/xinbiaocha.com/114.114.114.114
 server=/xinboaa.com/114.114.114.114
 server=/xinbqg.com/114.114.114.114
 server=/xincache.com/114.114.114.114
