--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -93869,6 +93869,7 @@ server=/ycis-bj.com/114.114.114.114
 server=/ycis-sh.com/114.114.114.114
 server=/ycispd-mun.com/114.114.114.114
 server=/yciyun.com/114.114.114.114
+server=/ycjingweiranqi.com/114.114.114.114
 server=/ycjmgk.com/114.114.114.114
 server=/ycjt2007.com/114.114.114.114
 server=/ycjy-service.com/114.114.114.114
