--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -57560,6 +57560,7 @@ server=/lyggm.com/114.114.114.114
 server=/lyghi.com/114.114.114.114
 server=/lygjdf.com/114.114.114.114
 server=/lygjtkgjt.com/114.114.114.114
+server=/lygktj.com/114.114.114.114
 server=/lygmedia.com/114.114.114.114
 server=/lygnews.com/114.114.114.114
 server=/lygou.cc/114.114.114.114
