--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -50633,6 +50633,7 @@ server=/jszhaobiao.com/114.114.114.114
 server=/jszhongte.com/114.114.114.114
 server=/jszhongyoutang.com/114.114.114.114
 server=/jszjgg.net/114.114.114.114
+server=/jszjrqrd.com/114.114.114.114
 server=/jszjscl.com/114.114.114.114
 server=/jszjsx.com/114.114.114.114
 server=/jszkrz.com/114.114.114.114
