--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -83013,6 +83013,7 @@ server=/tzsucai.com/114.114.114.114
 server=/tzswatch.com/114.114.114.114
 server=/tzswfz.com/114.114.114.114
 server=/tzszyy.com/114.114.114.114
+server=/tztrq.com/114.114.114.114
 server=/tztrzjt.com/114.114.114.114
 server=/tztusi.com/114.114.114.114
 server=/tzujian.com/114.114.114.114
