--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -23029,6 +23029,7 @@ server=/cqqnb.net/114.114.114.114
 server=/cqqp.com/114.114.114.114
 server=/cqqsyy.com/114.114.114.114
 server=/cqqyn.com/114.114.114.114
+server=/cqranxie.com/114.114.114.114
 server=/cqrc.net/114.114.114.114
 server=/cqrcb.com/114.114.114.114
 server=/cqrcdsc.com/114.114.114.114
