--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -68168,6 +68168,7 @@ server=/qhrch.com/114.114.114.114
 server=/qhrcsc.com/114.114.114.114
 server=/qhres.com/114.114.114.114
 server=/qhres2.com/114.114.114.114
+server=/qhrqxh.com/114.114.114.114
 server=/qhscw.net/114.114.114.114
 server=/qhsdzs.com/114.114.114.114
 server=/qhsetup.com/114.114.114.114
