--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -33340,6 +33340,7 @@ server=/gdrc365.com/114.114.114.114
 server=/gdrcu.com/114.114.114.114
 server=/gdrfyy.com/114.114.114.114
 server=/gdroro.com/114.114.114.114
+server=/gdrqj.org/114.114.114.114
 server=/gds-services.com/114.114.114.114
 server=/gdsa.com/114.114.114.114
 server=/gdscse.net/114.114.114.114
