--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -65693,6 +65693,7 @@ server=/palmpk.com/114.114.114.114
 server=/palmtrends.com/114.114.114.114
 server=/palmyou.com/114.114.114.114
 server=/paloinino.com/114.114.114.114
+server=/palomachina.com/114.114.114.114
 server=/pamahotel.com/114.114.114.114
 server=/pamica.com/114.114.114.114
 server=/pamss.net/114.114.114.114
