--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -32579,6 +32579,7 @@ server=/fynews.net/114.114.114.114
 server=/fyrcbk.com/114.114.114.114
 server=/fyrexian.com/114.114.114.114
 server=/fyrmyy.com/114.114.114.114
+server=/fyrqgs.com/114.114.114.114
 server=/fyrwzz.com/114.114.114.114
 server=/fysfzk.com/114.114.114.114
 server=/fysjbj.com/114.114.114.114
