--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -19498,6 +19498,7 @@ server=/china-reform.org/114.114.114.114
 server=/china-ric.com/114.114.114.114
 server=/china-riscv.com/114.114.114.114
 server=/china-russia.org/114.114.114.114
+server=/china-sce.com/114.114.114.114
 server=/china-season.com/114.114.114.114
 server=/china-security.com/114.114.114.114
 server=/china-see.com/114.114.114.114
