--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -73868,6 +73868,7 @@ server=/shanxihaoshengtong.com/114.114.114.114
 server=/shanxijianzhuzizhi.com/114.114.114.114
 server=/shanximuseum.com/114.114.114.114
 server=/shanxiol.com/114.114.114.114
+server=/shanxiranqi.com/114.114.114.114
 server=/shanxishangren.com/114.114.114.114
 server=/shanxishizheng.com/114.114.114.114
 server=/shanxiumao.com/114.114.114.114
