--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -18049,6 +18049,7 @@ server=/cdhr.net/114.114.114.114
 server=/cdhsgb.com/114.114.114.114
 server=/cdhtgroup.com/114.114.114.114
 server=/cdhtnews.com/114.114.114.114
+server=/cdhtrq.com/114.114.114.114
 server=/cdhxdq.com/114.114.114.114
 server=/cdidc.net/114.114.114.114
 server=/cditv.tv/114.114.114.114
