--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -91975,6 +91975,7 @@ server=/xn--h0tn34c.cc/114.114.114.114
 server=/xn--h6qq3whvbw6a42x4ij.com/114.114.114.114
 server=/xn--h6qyr29eh1buxk3e37mxzkp28b2b8c.xn--3ds443g/114.114.114.114
 server=/xn--hdc1eb8be0au3c9hfb.xn--gecrj9c/114.114.114.114
+server=/xn--husx9zj2eepau0se83d.com/114.114.114.114
 server=/xn--hutn94av9amzg.net/114.114.114.114
 server=/xn--i6q33br88fkud.com/114.114.114.114
 server=/xn--igt225itqf.com/114.114.114.114
