--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -22699,6 +22699,7 @@ server=/conoha.vip/114.114.114.114
 server=/conpak.com.hk/114.114.114.114
 server=/conshow.com/114.114.114.114
 server=/conslive.com/114.114.114.114
+server=/consmation.com/114.114.114.114
 server=/console-integration.cdnetworks.com/114.114.114.114
 server=/console.cdnetworks.com/114.114.114.114
 server=/constao.com/114.114.114.114
