--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -81971,6 +81971,7 @@ server=/tonlyele.com/114.114.114.114
 server=/tonnn.com/114.114.114.114
 server=/tonnp.com/114.114.114.114
 server=/tonsontec.com/114.114.114.114
+server=/tontian.com/114.114.114.114
 server=/tony-bro.com/114.114.114.114
 server=/tonycrane.cc/114.114.114.114
 server=/tonysfarm.com/114.114.114.114
