--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -23521,6 +23521,7 @@ server=/cspbj.com/114.114.114.114
 server=/cspda.net/114.114.114.114
 server=/cspengyuan.com/114.114.114.114
 server=/cspiii.com/114.114.114.114
+server=/cspmk.com/114.114.114.114
 server=/cspplaza.com/114.114.114.114
 server=/cspro.org/114.114.114.114
 server=/cspruc.com/114.114.114.114
