--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -24087,6 +24087,7 @@ server=/cysy-cn.com/114.114.114.114
 server=/cyszxyy.com/114.114.114.114
 server=/cyt369.com/114.114.114.114
 server=/cytcard.com/114.114.114.114
+server=/cytoniche.com/114.114.114.114
 server=/cyts.com/114.114.114.114
 server=/cytsdl.com/114.114.114.114
 server=/cytsls.com/114.114.114.114
