--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -49799,6 +49799,7 @@ server=/jkb7.com/114.114.114.114
 server=/jkbexp.com/114.114.114.114
 server=/jkbl.com/114.114.114.114
 server=/jkc8.com/114.114.114.114
+server=/jkchemical.com/114.114.114.114
 server=/jkcn365.com/114.114.114.114
 server=/jkcorkpads.com/114.114.114.114
 server=/jkcsjd.com/114.114.114.114
