--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -66893,6 +66893,7 @@ server=/pinzhenglh.com/114.114.114.114
 server=/pinzhi.org/114.114.114.114
 server=/pinzhikeji.net/114.114.114.114
 server=/pinzs.com/114.114.114.114
+server=/pioneer-pku.com/114.114.114.114
 server=/pioneerep.com/114.114.114.114
 server=/pioneersci.com/114.114.114.114
 server=/pipa.com/114.114.114.114
