--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -49087,6 +49087,7 @@ server=/jinghangapps.com/114.114.114.114
 server=/jinghangedu.com/114.114.114.114
 server=/jinghongsh.com/114.114.114.114
 server=/jinghua.com/114.114.114.114
+server=/jinghuans.com/114.114.114.114
 server=/jinghuazhijia.com/114.114.114.114
 server=/jingjia.net/114.114.114.114
 server=/jingjia.org/114.114.114.114
